--- a/src/app/sharepage/navbar/navbar.component.html
+++ b/src/app/sharepage/navbar/navbar.component.html
@@ -12,7 +12,7 @@
           <a class="nav-link" routerLink="/novo">Cadastro de Produtos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="#">Lista de Produtos</a>
+          <a class="nav-link" routerLink="/produto">Lista de Produtos</a>
         </li>
       </ul>
     </div>
